{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 42,
  "lineage": "7ee87af9-3780-e1ea-648f-22ed167201db",
  "resources": [
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intenet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:internet-gateway/igw-0fd3a73c692a33a89",
            "id": "igw-0fd3a73c692a33a89",
            "owner_id": "590183828507",
            "tags": {
              "Name": "Internet-gateway-terraform"
            },
            "tags_all": {
              "Name": "Internet-gateway-terraform",
              "managed-by": "terraform",
              "owner": "aldo"
            },
            "vpc_id": "vpc-0d1005b8535206aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:route-table/rtb-034c65a3c0b718edf",
            "id": "rtb-034c65a3c0b718edf",
            "owner_id": "590183828507",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route Privada"
            },
            "tags_all": {
              "Name": "Route Privada",
              "managed-by": "terraform",
              "owner": "aldo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1005b8535206aca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:route-table/rtb-0fa9e9b8623d9f734",
            "id": "rtb-0fa9e9b8623d9f734",
            "owner_id": "590183828507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd3a73c692a33a89",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Publica"
            },
            "tags_all": {
              "Name": "Route Publica",
              "managed-by": "terraform",
              "owner": "aldo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1005b8535206aca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_tables.aws_internet_gateway.intenet_gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daded649b44322ab",
            "route_table_id": "rtb-034c65a3c0b718edf",
            "subnet_id": "subnet-0060a2ee91efcae81"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.subnet1",
            "module.subnets.aws_subnet.subnet2",
            "module.subnets.aws_subnet.subnet3",
            "module.subnets.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet4",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4362641f977c86e",
            "route_table_id": "rtb-034c65a3c0b718edf",
            "subnet_id": "subnet-07da50b3ca0da3c7d"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.subnet1",
            "module.subnets.aws_subnet.subnet2",
            "module.subnets.aws_subnet.subnet3",
            "module.subnets.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0419d3f81101a8854",
            "route_table_id": "rtb-0fa9e9b8623d9f734",
            "subnet_id": "subnet-0fd9ae4c6b643b000"
          },
          "dependencies": [
            "module.route_tables.aws_internet_gateway.intenet_gateway",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.subnet1",
            "module.subnets.aws_subnet.subnet2",
            "module.subnets.aws_subnet.subnet3",
            "module.subnets.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0844a6e54d366b833",
            "route_table_id": "rtb-0fa9e9b8623d9f734",
            "subnet_id": "subnet-02ac1e9c95df6d8c0"
          },
          "dependencies": [
            "module.route_tables.aws_internet_gateway.intenet_gateway",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.subnet1",
            "module.subnets.aws_subnet.subnet2",
            "module.subnets.aws_subnet.subnet3",
            "module.subnets.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:subnet/subnet-0fd9ae4c6b643b000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd9ae4c6b643b000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183828507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1",
              "managed-by": "terraform",
              "owner": "aldo"
            },
            "vpc_id": "vpc-0d1005b8535206aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:subnet/subnet-0060a2ee91efcae81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0060a2ee91efcae81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183828507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2",
              "managed-by": "terraform",
              "owner": "aldo"
            },
            "vpc_id": "vpc-0d1005b8535206aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:subnet/subnet-02ac1e9c95df6d8c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac1e9c95df6d8c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183828507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-3"
            },
            "tags_all": {
              "Name": "Subnet-3",
              "managed-by": "terraform",
              "owner": "aldo"
            },
            "vpc_id": "vpc-0d1005b8535206aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:subnet/subnet-07da50b3ca0da3c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07da50b3ca0da3c7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183828507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-4"
            },
            "tags_all": {
              "Name": "Subnet-4",
              "managed-by": "terraform",
              "owner": "aldo"
            },
            "vpc_id": "vpc-0d1005b8535206aca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183828507:vpc/vpc-0d1005b8535206aca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa83220983d126c9",
            "default_route_table_id": "rtb-0b14a84e9e5b14702",
            "default_security_group_id": "sg-0a36a30af474ba61e",
            "dhcp_options_id": "dopt-096476bbd1f72d6f5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1005b8535206aca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b14a84e9e5b14702",
            "owner_id": "590183828507",
            "tags": {
              "Name": "VPC-TERRAFORM"
            },
            "tags_all": {
              "Name": "VPC-TERRAFORM",
              "managed-by": "terraform",
              "owner": "aldo"
            }
          }
        }
      ]
    }
  ]
}